--- a/ShowcaseClient/ShowcaseClient.csproj
+++ b/ShowcaseClient/ShowcaseClient.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="6.0.0" />
+        <PackageReference Include="AntDesign.ProLayout" Version="0.1.10" />
 
         <!-- gRPC -->
         <PackageReference Include="Google.Protobuf" Version="3.18.1" />
@@ -34,6 +35,10 @@
     <ItemGroup>
         <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
         <None Remove="Directory.build.*" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Components\GlobalHeader" />
     </ItemGroup>
 
 </Project>
