--- a/BlazorShowcaseBackend/appsettings.json
+++ b/BlazorShowcaseBackend/appsettings.json
@@ -1,8 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Information",
+      "Serilog.AspNetCore.RequestLoggingMiddleware": "Information" 
     }
   },
   "AllowedHosts": "*"
