--- a/BlazorShowcaseBackend/BlazorShowcaseBackend.csproj
+++ b/BlazorShowcaseBackend/BlazorShowcaseBackend.csproj
@@ -22,11 +22,21 @@
 		<PackageReference Include="Duende.BFF" Version="1.1.2" />
 		<PackageReference Include="Grpc.AspNetCore" Version="2.40.0" />
 		<PackageReference Include="Grpc.AspNetCore.Web" Version="2.40.0" />
-		<ProjectReference Include="..\Shared\Shared.csproj" />
-		
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+
+		<PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
+
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.1" />
 
+		<ProjectReference Include="..\Shared\Shared.csproj" />
+		<ProjectReference Include="..\ShowcaseClient\ShowcaseClient.csproj" />
+		
+
 		<Protobuf Include="..\Shared\protobuf.proto" GrpcServices="Server" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Pages\" />
 	</ItemGroup>
 </Project>
